--- a/content/en/_index.html
+++ b/content/en/_index.html
@@ -72,7 +72,7 @@ Flux is a CNCF Graduated project!
 
 <div class="hero-gitops">
   {{% blocks/hero title="Flux - the GitOps family of projects" color="primary"
-  height="full" link_title="Get started" link_url="/flux/get-started/" %}}
+  height="full" link_title="Get started" link_url="/flux/concepts/" %}}
   Flux is a set of continuous and progressive delivery solutions for Kubernetes that are open and extensible.
  
   The latest version of Flux brings many new features, making it more flexible and versatile.
